argocd/apps/media-server/jellyfin/manifests/http-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  # annotations:
  #   gethomepage.dev/enabled: "true"
  #   gethomepage.dev/name: Radarr
  #   gethomepage.dev/icon: radarr
  #   gethomepage.dev/description: "Radarr is a movie collection manager for Usenet and BitTorrent users."
  #   gethomepage.dev/pod-selector: app=radarr
  labels:
    app: jellyfin-app
  name: jellyfin-httproute
  namespace: jellyfin
spec:
  parentRefs:
  - name: gateway-api
    namespace: istio-system
    sectionName: https
  hostnames:
  - jellyfin.yanello.net
  rules:
  - backendRefs:
    - name: jellyfin
      namespace: jellyfin
      port: 7878
